Fix overflowing inputs on some platforms.
width: 100% sets the content-box width, unless the box-sizing value is `border-box`, see:

  https://developer.mozilla.org/en-US/docs/Web/CSS/box-sizing

In platforms with more padding by default on inputs (like Firefox on Linux for example)
this can cause the inputs to overflow the popup.

Also shrink the padding manually to what the popup layout expect.

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -86,7 +86,9 @@ footer a.button {
 
 input[type=url], select {
   width: 100%;
+  box-sizing: border-box;
   margin-bottom: 5px;
+  padding: 1px 2px;
 }
 
 input[type=checkbox] {
